# dream-hw

./: README.md
dream-ml-platform/: Dockerfile  pyproject.toml
dream-ml-platform/dream/: __init__.py  config.yaml  constants.py
dream-ml-platform/dream/app/: app.py
dream-ml-platform/dream/data_cleaning/: data_cleaning.py
dream-ml-platform/dream/data_models/: base.py  request.py  response.py
dream-ml-platform/dream/dataframes/: result_data.csv  test_data.csv  train_data.csv
dream-ml-platform/dream/models/: LR_model.pkl  RFR_model.pkl  SVR_model.pkl  encoder.pkl  model.pkl
dream-ml-platform/dream/service/: data_processing.py  model_inference.py  model_training.py
